--- a/a.html
+++ b/a.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> First</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
 </head>
 <body>
  <h1>Hello chumika</h1>
